add JVM args